add markup header

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               height="300"
             />
             <h3 class="h-three-team">Screen Illustrations</h3>
-            <p class="item-portfolio-text">Designv</p>
+            <p class="item-portfolio-text">Design</p>
           </li>
 
           <li>
