--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >Web<span class="text-logo">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
           <li><a class="nav-link" href="">Portfolio</a></li>
           <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
